[package]
name = "s3-presigned-urls"
version = "0.0.1"
authors = ["Rodney Johnson <ask@rodneylab.com>"]
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/rodneylab/s3-presigned-urls"
description = "WASM functions for generating AWS compatible presigned URLs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.13.1"
chrono = "0.4.22"
hex = "0.4.3"
hmac="0.12.0"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
sha2 = "0.10"
url = "2.3.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
